--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
 #    volumes:
 #      - /app/node_modules
     command: yarn run dev
+#    volumes:
+#      - .:/app
 
 volumes:
   pgdata:
