--- a/package.json
+++ b/package.json
@@ -4,21 +4,35 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.3.2",
     "@prisma/client": "^6.8.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.16.0",
-    "prisma": "^6.8.2"
+    "prisma": "^6.8.2",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0",
+    "zod": "^3.25.51"
   },
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.29",
     "@types/pg": "^8.15.4",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod-to-openapi": "^0.2.1"
   }
 }
