--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pg": "^8.16.0",
     "prisma": "^6.8.2",
     "swagger-ui-express": "^5.0.1",
-    "yamljs": "^0.3.0",
+    "yaml": "^2.8.0",
     "zod": "^3.25.51"
   },
   "scripts": {
